# claude-code-cluster

./: AGENT_CHECK_20250119_NIGHT.md  AGENT_PROGRESS_CHECK_20250119_FINAL.md  AGENT_QUICK_REFERENCE.md  AGENT_REPORT_CHECK_20250119_PM.md  AGENT_SONNET_INSTRUCTIONS.md  AGENT_SONNET_SYSTEM_DOCUMENTATION.md  AGENT_STATUS_UPDATE_20250119_EVENING.md  AGENT_TRANSITION_NOTICE.md  ARCHITECTURE.md  AUTOMATION_SCRIPTS_COLLECTION.md  CC01_ADDITIONAL_INSTRUCTIONS.md  CC01_FRONTEND_AGENT_INSTRUCTIONS.md  CC01_STATUS_CHECK_20250119.md  CC01_TASK_QUEUE_FRONTEND.md  CC02_ADDITIONAL_INSTRUCTIONS.md  CC02_BACKEND_AGENT_INSTRUCTIONS.md  CC02_STATUS_CHECK_20250119.md  CC02_TASK_QUEUE_BACKEND.md  CC03_ADDITIONAL_INSTRUCTIONS.md  CC03_INFRASTRUCTURE_AGENT_INSTRUCTIONS.md  CC03_STATUS_CHECK_20250119.md  CC03_TASK_QUEUE_INFRASTRUCTURE.md  CLAUDE.md  COMMAND_LOGGING_SETUP_GUIDE.md  COMPLETE_DEPLOYMENT_GUIDE.md  COORDINATION_TASKS_20250119.md  COST_COMPARISON.md  DETAILED_INSTALLATION_GUIDE.md  GITHUB_ACTIONS_MINIMAL_DESIGN.md  IMPLEMENTATION_ANALYSIS.md  IMPLEMENTATION_QUICKSTART.md  INSTALLATION_COMMANDS.md  INSTALLATION_GUIDE.md  INSTALL_MIGRATION_GUIDE.md  ITDO_ERP2_IMPLEMENTATION_GUIDE.md  ITDO_ERP2_PODMAN_SETUP.md  MIGRATION_GUIDE.md  Makefile  OPERATION_GUIDE.md  QUICK_ACTION_ITEMS_20250119.md  (+17 more)
claude-code-cluster-poc/: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE_CODE_INTEGRATION.md  CLAUDE_CODE_SIMULATOR.py  DEPLOYMENT.md  Dockerfile  EXAMPLES.md  POC_USAGE_GUIDE.md  QUICKSTART.md  README.md  SIMULATOR_GUIDE.md  USAGE.md  docker-compose.yml  pyproject.toml  setup.py
(+170 files in other folders)
